footer now properly aligns with bottom of pages, and icons no longer overlap over content

--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -54,9 +54,14 @@ code {
     monospace;
 }
 
+.spacer {
+  display: block;
+  bottom: auto;
+  height: 15vh;
+}
+
 .icon {
   display: block;
-  bottom: 10vh;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
@@ -64,13 +69,26 @@ code {
   width: 7vh;
 }
 
+.icon-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 .footer {
-  position: fixed;
-  bottom: 3vh;
+  position: relative;
   left: 0;
   width: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  
+}
+
+.footer-spacing {
+  position: relative;
+  background-color: #444554;
+  height: 5vh;
+  width: auto;
 }
 
 
@@ -122,7 +140,13 @@ code {
   
 }
 
-
+@media screen and (min-width: 769px) {
+  .footer {
+    flex-direction: row;
+    position: fixed;
+  }
+  
+}
 
 @media screen and (min-width: 769px) {
   .bio {
